# cli

./: .gitignore  Cargo.toml  README.md  justfile
.zed/: debug.json
_posts/: 2022-11-26-setting-up-my-own-static-site-generator.md  2022-12-27-setting-up-my-own-static-site-generator-part-2.md  2023-03-16-beautiful-rust.md  2023-07-30-bevy-game-in-svelte-kit.md  2024-05-12-running-async-tasks-in-tauri-v2.md  2024-06-13-playing-with-gleam.md  2024-07-18-new-lab-gaml.md  2024-08-12-you-should-read-the-mountain-in-the-sea.md  2024-09-07-unwrapped-project.md  2024-10-13-creating-a-small-video-streaming-service.md  2024-10-15-creating-a-queue-for-video-processing.md  2024-10-21-pushing-notifications-to-the-client-from-postgres.md  2025-07-03-example-article-2.md  2025-07-03-yo-skibbidy.md
assets/: blog.css  code.css  fonts.css  main.css
assets/js/: highlight-gleam.min.js
lib/articles/: Cargo.toml
lib/articles/src/: builder.rs  errors.rs  lib.rs
lib/context/: Cargo.toml
lib/context/src/: error.rs  lib.rs
lib/web/: Cargo.toml
lib/web/src/: errors.rs  lib.rs
templates/: base.hbs  blog.hbs  index.hbs  post.hbs
templates/partials/: base.hbs
