[package]
name = "articles"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = { version = "0.10.3", features = ["serde"] }
markdown = "1.0.0"
markdown-ppp = "2.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
