[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.46.0", features = ["full"] }
tracing = "0.1.41"
articles = { path = "../articles" }
thiserror = "2.0.12"
handlebars = "6.3.2"
serde_json = "1.0.140"
axum-template = { version = "3.0.0", features = ["handlebars"] }
serde = "1.0.219"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
